--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 			<div class="cl">&nbsp;</div>
 			<a href="#" class="left">TERMS OF USE</a>
 			<a href="#" class="left">PRIVACY POLICY</a>
-			<p class="right">&copy; Sitename.com. Design by <a href="http://chocotemplates.com">ChocoTemplates.com</a></p>
+			<p class="right">&copy; Контактные данные: <a href="support@SportZone.com>ChocoTemplates.com</a></p>
+			<p class="right">&copy; Номер телефона: <a href="89001234567</a></p>
 			<div class="cl">&nbsp;</div>
 		</div>
 	</div>
