--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
 	<div id="footer">
 		<div class="shell">
 			<div class="cl">&nbsp;</div>
-			<a href="#" class="left">TERMS OF USE</a>
-			<a href="#" class="left">PRIVACY POLICY</a>
-			<p class="right">&copy; Контактные данные: <a href="support@SportZone.com</a></p>
+			<p class="left">Адрес регистрации: Россия, г.Москва</p>
+			<p class="right">Контактные данные: support@SportZone.com</p>
 			<div class="cl">&nbsp;</div>
 		</div>
 	</div>
