--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@
 	<div id="footer">
 		<div class="shell">
 			<div class="cl">&nbsp;</div>
-			<p class="left">Адрес регистрации: Россия, г.Москва</p>
-			<p class="right">Контактные данные: support@SportZone.com</p>
+			<p class="left">Адрес регистрации: Российская Федерация, г. Москва</p>
+			<p class="right">Контактные данные: support@SportZone.com
+			                                     8900123467</p>
 			<div class="cl">&nbsp;</div>
 		</div>
 	</div>
