--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
 		<div class="shell">
 			<div class="cl">&nbsp;</div>
 			<p class="left">Адрес регистрации: Российская Федерация, г. Москва</p>
-			<p class="right">Контактные данные: support@SportZone.com
-			                                     8900123467</p>
+			<p class="right">Контактные данные: support@SportZone.com</p>
 			<div class="cl">&nbsp;</div>
 		</div>
 	</div>
