--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 					    <li><div class="link"><a href="#">Результаты</a></div></li>
 					    <li><div class="link"><a href="#">Сообщество</a></div></li>
 					    <li><div class="link"><a href="#">Фотогалерея</a></div></li>
+					    <li><div class="link"><a href="#">Видеогалерея</a></div></li>
 					</ul>
 				</div>
 				<!-- End Sub nav -->
