--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					<ul>
 					    <li class="active"><div class="link"><a href="#">Главная страница</a></div></li>
 					    <li><div class="link"><a href="#">Таблицы</a></div></li>
+					    <li><div class="link"><a href="#">Чемпионаты</a></div></li>
 					    <li><div class="link"><a href="#">Результаты</a></div></li>
 					    <li><div class="link"><a href="#">Сообщество</a></div></li>
 					    <li><div class="link"><a href="#">Фотогалерея</a></div></li>
